# elyosai_takehome

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  chat.py  chat_app_plan.html  north_stars.md  probe_injection.py  project_context.md  pyproject.toml  requirements.txt  restart_servers.sh
backend/: react_agent_refactor_plan.md
backend/case_studies/: 2026-05-18-probe-findings-chat-app-coverage.md  2026-05-18-research-api-hallucination.md  2026-05-19-disciplined-resilience-harness-plan.md
backend/chat/: README.md  __init__.py  __main__.py  agent.py  config.yaml  config_reference.md  llm_client.py  load_config.py  models.py  paths.py  prompts.py  tools.py  validate.py  validate_resilience.py
backend/chat/core/: __init__.py  engine.py  (+3 more)
backend/llm_utils/: litellm_kwargs.py
backend/probes/: __init__.py  probe_research.py  probe_research_cancellation.py  probe_weather.py  probe_weather_cancellation.py
backend/reference_docs/: allowed_models.csv  llm_prompting_guide.md  llm_rules.md
case_studies/: 2026-05-18-probe-findings-chat-app-coverage.md  2026-05-18-research-api-hallucination.md  2026-05-19-disciplined-resilience-harness-plan.md  2026-05-19-post-refactor-coverage-audit.md  fix-round-1-constraint-sentence.md  fix-round-2-icl-grounded-response.md
frontend/: README.md  index.html
initial_api_invocations/: fetch.sh  probe_injection.py
initial_research_reports/: Elyos AI — Research Report.html  api_quirks_research_v2.html  api_quirks_research_v3.html  elyos_api_recon_findings.html
presentation_prep/: slides.html
probe_reports/: research_bounded_concurrency_report.html  research_cancellation_report.html  research_probe_plan.html  research_probe_report.html  research_report.html  research_resilience_scenarios.html  shared_rate_limit_bucket_report.html  weather_cancellation_report.html  weather_report.html
probe_reports/_archive/: weather_probe_report.html
(+17 files in other folders)
